# game-engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  index.html
.cargo/: config.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  plugin.rs  runner.rs  update_group.rs
crates/app/src/plugins/: mod.rs
crates/core/: Cargo.toml
crates/core/macros/: Cargo.toml
crates/core/macros/src/: lib.rs
crates/core/src/: archetype.rs  bundle.rs  component.rs  entity.rs  lib.rs  query.rs  resource.rs  schedule.rs  system.rs  system_input.rs  system_metadata.rs  table.rs  time.rs  transform.rs  world.rs
crates/core/src/assets/: asset_loader.rs  asset_manager.rs  asset_server.rs  asset_store.rs  handle.rs  mod.rs  utils.rs
crates/core/src/components/: camera.rs  transform.rs
crates/core/src/tasks/: mod.rs  task_pool.rs
crates/debug-gizmos/: Cargo.toml
crates/debug-gizmos/src/: components.rs  lib.rs  material.rs  plugin.rs  shapes.rs
crates/debug-gizmos/src/shaders/: gizmo.wgsl
crates/ecs/: Cargo.toml
crates/ecs/macros/: Cargo.toml
crates/ecs/macros/src/: lib.rs
crates/ecs/src/: archetype.rs  bundle.rs  command.rs  commands.rs  common.rs  component.rs  entity.rs  entity_store.rs  lib.rs  query.rs  query_filter.rs  resource.rs  schedule.rs  table.rs  utilities.rs  world.rs
crates/ecs/src/component/: bundle.rs  mod.rs
crates/ecs/src/entity/: entity_store.rs  hierarchy.rs  mod.rs
crates/ecs/src/events/: event_channel.rs  event_reader.rs  event_writer.rs  mod.rs
crates/ecs/src/query/: change_detection.rs  mod.rs  query_filter.rs
crates/ecs/src/system/: access.rs  batch.rs  config.rs  graph.rs  mod.rs  schedule.rs  sync_point.rs  system_input.rs
crates/ecs/src/system/executor/: mod.rs  multi_thread.rs  single_thread.rs
crates/editor/: Cargo.toml
crates/editor/src/: layout.rs  main.rs  plugin.rs
crates/essential/: Cargo.toml
crates/essential/macros/: Cargo.toml
crates/essential/macros/src/: lib.rs
crates/essential/src/: blend.rs  lib.rs  time.rs  transform.rs
crates/essential/src/assets/: asset_container.rs  asset_loader.rs  asset_server.rs  asset_store.rs  compute_pool.rs  handle.rs  load_pool.rs  mod.rs  utils.rs
crates/essential/src/geometry/: delauney.rs  mod.rs
crates/essential/src/tasks/: mod.rs  task.rs  task_pool.rs  thread_executor.rs  wasm_task.rs  wasm_task_pool.rs
crates/essential/src/time/: instant.rs  mod.rs
crates/essential/src/transform/: mod.rs  systems.rs
crates/essential/src/utils/: mod.rs
crates/gltf/: Cargo.toml
crates/gltf-loader/: Cargo.toml
crates/gltf-loader/src/: lib.rs  loader.rs  plugin.rs
crates/gltf/src/: loader.rs  plugin.rs
crates/obj-loader/: Cargo.toml
crates/obj-loader/src/: lib.rs  mtl_loader.rs  obj_loader.rs  plugin.rs
crates/physics/: Cargo.toml
crates/physics/src/: collider.rs  lib.rs  physics_body.rs  physics_pipeline.rs  physics_server.rs  physics_state.rs  plugin.rs  rigid_body.rs  simulation.rs
crates/physics/src/collision/: collider.rs  collider_shape.rs  contact.rs  mod.rs
crates/render/: Cargo.toml
crates/render/macros/: Cargo.toml
crates/render/macros/src/: lib.rs
crates/render/src/: device.rs  layouts.rs  lib.rs  material_plugin.rs  plugin.rs  queue.rs  render_asset.rs  resources.rs  systems.rs  texture.rs  vertex.rs  wgpu_wrapper.rs
crates/render/src/assets/: material.rs  mesh.rs  mod.rs  scene.rs  skeleton.rs  skybox_material.rs  texture.rs  vertex.rs
crates/render/src/components/: camera.rs  light.rs  material.rs  material_component.rs  mesh.rs  mesh_component.rs  mod.rs  render_entity.rs  render_material_component.rs  skeleton.rs  skeleton_component.rs  skybox.rs  transform.rs  world_environment.rs
crates/render/src/loaders/: gltf_loader.rs  mod.rs  mtl_loader.rs  obj_loader.rs  texture_loader.rs
crates/render/src/mesh/: layouts.rs  material.rs  mod.rs  mtl_loader.rs  obj_loader.rs  render_instanced_mesh.rs  render_material.rs  render_mesh.rs  render_texture.rs  texture.rs  texture_loader.rs  vertex.rs
crates/render/src/render_asset/: mod.rs  render_material.rs  render_mesh.rs  render_skeleton.rs  render_texture.rs  render_window.rs
crates/render/src/shaders/: mesh.wgsl  shader.wgsl  skybox.wgsl
crates/render/src/systems/: mod.rs  render.rs  sync_entities.rs  update_camera.rs  update_window.rs
crates/skybox/: Cargo.toml
crates/skybox/src/: lib.rs  material.rs  plugin.rs
crates/skybox/src/shaders/: skybox.wgsl
crates/tasks/: Cargo.toml
crates/tasks/src/: compute_pool.rs  lib.rs  load_pool.rs  task.rs  task_pool.rs  thread_executor.rs  wasm_task.rs  wasm_task_pool.rs
crates/terminal-render/: Cargo.toml
crates/terminal-render/src/: ascii_converter.rs  buffer.rs  colors.rs  lib.rs  plugin.rs  readback.rs  resource.rs  terminal_device.rs
crates/terminal-render/src/systems/: mod.rs  terminal_output.rs
crates/terminal-renderer/: Cargo.toml
crates/terminal-renderer/src/: ascii.rs  frame.rs  input.rs  lib.rs  plugin.rs  readback.rs  resize.rs  runner.rs  strategy.rs  terminal.rs  terminal_size.rs
crates/ui/: Cargo.toml
crates/ui/src/: checkbox.rs  components.rs  focus.rs  input.rs  interaction.rs  layout.rs  lib.rs  material.rs  node.rs  plugin.rs  render.rs  resources.rs  slider.rs  text_input.rs  transform.rs  vertex.rs
crates/ui/src/button/: mod.rs
crates/ui/src/shaders/: ui.wgsl  ui_viewport.wgsl
crates/ui/src/text/: mod.rs  resources.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs  plugin.rs  winit_events.rs
crates/window/src/input/: mod.rs
crates/world-grid/: Cargo.toml
crates/world-grid/src/: material.rs  plugin.rs
crates/world-grid/src/shaders/: world_grid.wgsl
examples/game/: Cargo.toml  build.rs
examples/game/res/: ground.mtl  idle.glb
examples/game/src/: custom_material.rs  main.rs  movement_animation.rs
examples/terminal-game/: Cargo.toml
examples/terminal-game/src/: main.rs
plans/: animation-graph-todo.md  asset-server-todo.md  ecs-todo.md  ik-design.md  rendering-todo.md  tech-demo-todo.md
res/: backwards.glb  left_strafe.glb  right_strafe.glb  sphere.mtl  (+1 more)
(+76 files in other folders)
