[profile.release]
strip = true

[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "game-engine-bin"
path = "src/bin.rs"

[workspace]
members = ["crates/*"]

[dependencies]
app = { path = "crates/app" }
animation = { path = "crates/animation" }
essential = { path = "crates/essential" }
render = { path = "crates/render" }
ui = { path = "crates/ui" }
window = { path = "crates/window" }
ecs = { path = "crates/ecs" }
physics = { path = "crates/physics" }
gltf = { path = "crates/gltf" }
obj = { path = "crates/obj" }
cfg-if = "1.0.0"
env_logger = "0.11.8"
log = "0.4.27"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
glam = { version = "0.30.1" }
egui = "0.31.1"
wgpu-types = { version = "24", default-features = false }
statig = "=0.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "24.0.3", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element"] }

[build-dependencies]
anyhow = "1.0.97"
fs_extra = "1.3.0"
glob = "0.3.2"

[profile.dev.package.rapier3d]
opt-level = 3
