[profile.release]
strip = true

[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "game-engine-bin"
path = "src/bin.rs"

[workspace]
members = ["crates/*"]

[lints.rust]
warnings = "deny"

[dependencies]
app = { path = "crates/app" }
animation = { path = "crates/animation" }
essential = { path = "crates/essential" }
render = { path = "crates/render" }
window = { path = "crates/window" }
ecs = { path = "crates/ecs" }
physics = { path = "crates/physics" }
gltf-loader = { path = "crates/gltf-loader" }
obj-loader = { path = "crates/obj-loader" }
ui = { path = "crates/ui" }
skybox = { path = "crates/skybox" }
cfg-if = "1.0.0"
env_logger = "0.11.8"
log = "0.4.27"
winit = { version = "0.30" }
glam = { version = "0.30.1" }
wgpu-types = { version = "24", default-features = false }
taffy = "0.9.2"
bytemuck = { version = "1.22.0", features = ["derive"] }
wgpu = { version = "24.0.1", default-features = false, features = [
    "wgsl",
    "metal",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "24.0.1", features = ["webgl"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element"] }

[build-dependencies]
anyhow = "1.0.97"
fs_extra = "1.3.0"
glob = "0.3.2"

[profile.dev.package.rapier3d]
opt-level = 3
