[profile.release]
strip = true

[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["multithreaded"]
multithreaded = ["app/multithreaded"]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["crates/*", "examples/*"]

[lints.rust]
warnings = "deny"

[dependencies]
app = { path = "crates/app" }
animation = { path = "crates/animation" }
essential = { path = "crates/essential" }
render = { path = "crates/render" }
mesh = { path = "crates/mesh" }
window = { path = "crates/window" }
ecs = { path = "crates/ecs" }
gltf-loader = { path = "crates/gltf-loader" }
obj-loader = { path = "crates/obj-loader" }
ui = { path = "crates/ui" }
physics = { path = "crates/physics" }
skybox = { path = "crates/skybox" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "24.0.1", features = ["webgl"] }

[profile.dev.package.rapier3d]
opt-level = 3
