[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
ecs = { path = "../ecs" }
bytemuck = { version = "1.22.0", features = ["derive"] }
glam = { version = "0.30.1" }
anyhow = "1.0"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Other dependencies
reqwest = { version = "0.12.5" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
