[package]
name = "debug-gizmos"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app" }
essential = { path = "../essential" }
ecs = { path = "../ecs" }
render = { path = "../render" }
bitflags = "2.9.1"
encase = { version = "0.11.1", features = ["glam"] }
glam = { version = "0.30.1" }
env_logger = "0.11.6"
log = "0.4.26"
wgpu = { version = "24.0.1", default-features = false, features = [
    "wgsl",
    "metal",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }
wgpu-types = { version = "24", default-features = false }
cfg-if = "1.0.0"
pollster = "0.4.0"
send_wrapper = { version = "0.6.0" }
async-trait = "0.1.50"
anyhow = "1.0.97"
winit = { version = "0.30"}

[dependencies.image]
version = "0.25.5"
default-features = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3" }