[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ecs-macros = { path = "macros" }
any_vec = "0.14.0"
anymap3 = "1.0.1"
typle = "0.10.6"
log = "0.4.27"
petgraph = { version = "0.8" }
derive_more = { version = "2", features = ["full"] }
slotmap = "1.0"

rayon = "1.11.0"
