[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
app = { path = "../app" }
essential = { path = "../essential" }
ecs = { path = "../ecs" }
render = { path = "../render" }
ui = { path = "../ui" }
window = { path = "../window" }
taffy = "0.9.2"
glam = { version = "0.30.1" }
log = "0.4.27"
env_logger = "0.11.8"
winit = { version = "0.30" }
derive_more = { version = "2", features = ["full"] }