[package]
name = "essential"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ecs = { path = "../ecs" }
bytemuck = { version = "1.22.0", features = ["derive"] }
glam = { version = "0.30.1" }
cfg-if = "1"
crossbeam-channel = "0.5.0"
async-trait = "0.1.50"
async-executor = "1.11"
async-channel = "2.3.1"
pollster = "0.4.0"
futures-lite = "2.0.1"
web-time = "=1.1.0"
anyhow = "1.0.97"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Other dependencies
reqwest = { version = "0.12.5" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
futures-channel = "0.3.31"
wasm-bindgen-futures = "0.4.50"
