[package]
name = "gltf-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
animation = { path = "../animation" }
color = { path = "../color" }
essential = { path = "../essential" }
mesh = { path = "../mesh" }
ecs = { path = "../ecs" }
render = { path = "../render" }
gltf = { version = "1.4.1", features = ["KHR_lights_punctual"] }
anyhow = "1.0.97"
async-trait = "0.1.50"
glam = { version = "0.30.1" }
log = "0.4.27"
uuid = { version = "1.18.1", features = ["v4", "js"] }

[dependencies.image]
version = "0.25.5"
default-features = true
