[package]
name = "gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
animation = { path = "../animation" }
essential = { path = "../essential" }
ecs = { path = "../ecs" }
render = { path = "../render" }
gltf = { version = "1.4.1" }
async-trait = "0.1.50"
glam = { version = "0.30.1" }
log = "0.4.27"
uuid = { version = "1.18.1", features = ["v4"] }

[dependencies.image]
version = "0.25.5"
default-features = true
