[package]
name = "obj-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
color = { path = "../color" }
essential = { path = "../essential" }
ecs = { path = "../ecs" }
render = { path = "../render" }
tobj = { version = "4.0.3", default-features = false, features = ["async"] }
anyhow = "1.0.97"
async-trait = "0.1.50"
glam = { version = "0.30.1" }

[dependencies.image]
version = "0.25.5"
default-features = true
