[package]
name = "physics"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
essential = { path = "../essential" }
ecs = { path = "../ecs" }
glam = { version = "0.30.1" }
rapier3d = { version = "0.26.1", features = ["simd-stable"] }
nalgebra = { version = "0.34", features = ["convert-glam030"] }

[profile.dev.package.rapier3d]
opt-level = 3
