[package]
name = "render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app" }
core = { path = "../core" }
window = { path = "../window" }
env_logger = "0.11.6"
log = "0.4"
wgpu = { version = "24", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }
cfg-if = "1"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
