[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = "1.11"
async-channel = "2.3.1"
concurrent-queue = "2.5.0"
futures-lite = "2.0.1"
pollster = "0.4.0"
derive_more = { version = "2", features = ["full"] }
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = "0.3.31"
wasm-bindgen-futures = "0.4"
