[package]
name = "terminal-render"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
ecs = { path = "../ecs" }
essential = { path = "../essential" }
render = { path = "../render" }
window = { path = "../window" }

wgpu = { version = "24.0.1", default-features = false, features = ["wgsl", "metal"] }
wgpu-types = { version = "24", default-features = false }
glam = { version = "0.30.1" }
crossterm = "0.29"
log = "0.4"
anyhow = "1.0"
bytemuck = { version = "1.22.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
