[package]
name = "terminal-render"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
ecs = { path = "../ecs" }
essential = { path = "../essential" }
render = { path = "../render" }

wgpu = { version = "24.0.1", default-features = false, features = ["wgsl", "metal"] }
glam = { version = "0.30.1" }
crossterm = "0.29"
log = "0.4"
anyhow = "1.0"
