[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app" }
ecs = { path = "../ecs" }
render = { path = "../render" }
window = { path = "../window" }
egui = { version = "0.31.1", default-features = false }
egui-winit = { version = "0.31.1", default-features = false }
egui-wgpu = { version = "0.31.1", default-features = false }
