[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app" }
essential = { path = "../essential" }
ecs = { path = "../ecs" }
render = { path = "../render" }
window = { path = "../window" }
wgpu = { version = "24.0.1", default-features = false, features = [
    "wgsl",
    "metal",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }
wgpu-types = { version = "24", default-features = false }
bytemuck = { version = "1.22.0", features = ["derive"] }
taffy = "0.9.2"
glyphon = "0.8.0"
derive_more = { version = "2", features = ["full"] }
glam = { version = "0.30.1", features = ["bytemuck", "scalar-math"] }
log = "0.4.27"
