[package]
name = "game"
version = "0.1.0"
edition = "2021"

[features]
default = ["multithreaded"]
multithreaded = ["game-engine/multithreaded"]

[lints.rust]
warnings = "deny"

[dependencies]
game-engine = { path = "../.." }
bytemuck = { version = "1.22.0", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.11.8"
glam = { version = "0.30.1" }
log = "0.4.27"
winit = { version = "0.30" }
wgpu-types = { version = "24", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element"] }

[build-dependencies]
anyhow = "1.0.97"
fs_extra = "1.3.0"
glob = "0.3.2"
