[package]
name = "terminal-game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminal-game"
path = "src/main.rs"

[dependencies]
game-engine = { path = "../.." }
app = { path = "../../crates/app" }
ecs = { path = "../../crates/ecs" }
essential = { path = "../../crates/essential" }
color = { path = "../../crates/color" }
render = { path = "../../crates/render" }
debug-gizmos = { path = "../../crates/debug-gizmos" }
terminal-renderer = { path = "../../crates/terminal-renderer" }
gameplay = { path = "../../crates/gameplay" }
glam = "0.30.1"
ratatui = "0.30.0"
cfg-if = "1.0.0"
env_logger = "0.11.8"
wgpu-types = { version = "24", default-features = false }
winit = { version = "0.30" }

[build-dependencies]
anyhow = "1.0.97"
fs_extra = "1.3.0"
glob = "0.3.2"
